feat: ws connexion with utils

--- a/apps/stream-components/tsconfig.json
+++ b/apps/stream-components/tsconfig.json
@@ -9,8 +9,10 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "files": [],
-  "include": [],
+  "files": [
+  ],
+  "include": [
+  ],
   "references": [
     {
       "path": "./tsconfig.app.json"
