--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/server": "10.5.0",
     "fastify": "4.10.2",
     "superjson": "1.12.0",
+    "ws": "8.11.0",
     "zod": "3.20.2"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@rx-angular/template": "1.0.0-rc.4",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.16",
+    "@types/ws": "8.5.3",
     "@typescript-eslint/eslint-plugin": "5.46.1",
     "@typescript-eslint/parser": "5.46.1",
     "autoprefixer": "^10.4.13",
