--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "stream-components",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "18.12.1"
+  },
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
