--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -16,19 +16,28 @@ runs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ inputs.node-version }}
-        cache: 'pnpm'
 
-    - name: Cypress executable cache
-      uses: actions/cache@v3
+    - uses: pnpm/action-setup@v2
+      name: Install pnpm
+      id: pnpm-install
       with:
-        path: |
-          ~/.cache/Cypress
-        key: ${{ runner.os }}-node-${{ inputs.node-version }}-yarn-${{ hashFiles('**/pnpm-lock.yaml') }}
+        version: 7
+        run_install: false
+
+    - name: Get pnpm store directory
+      id: pnpm-cache
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+    - uses: actions/cache@v3
+      name: Setup pnpm cache
+      with:
+        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
-          ${{ runner.os }}-node-${{ inputs.node-version }}-
+          ${{ runner.os }}-pnpm-store-
 
     - name: Install dependencies
       shell: bash
-      run: pnpm --no-progress --non-interactive i
-      env:
-        HUSKY_SKIP_INSTALL: 'true'
+      run: pnpm install
