chore: use pnpm to run nx

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -39,4 +39,4 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Build
-        run: nx affected:build --exclude=docs --parallel
+        run: pnpm nx affected:build --exclude=docs --parallel
