chore: remove nx base param

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -40,4 +40,4 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Build
-        run: pnpm nx affected:build --base=main --parallel
+        run: pnpm nx affected:build --parallel --verbose
