chore: rename github workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,5 +1,5 @@
 # Inspired by : https://github.com/rx-angular/rx-angular/blob/main/.github/workflows/build-and-test.yml
-name: stream-components CI
+name: Stream Components - CI
 
 on:
   push:
