--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -34,9 +34,17 @@ runs:
       name: Setup pnpm cache
       with:
         path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        key: ${{ runner.os }}-pnpm-store
         restore-keys: |
-          ${{ runner.os }}-pnpm-store-
+          ${{ runner.os }}-pnpm-store
+
+#    - uses: actions/cache@v3
+#      name: Setup pnpm cache
+#      with:
+#        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+#        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+#        restore-keys: |
+#          ${{ runner.os }}-pnpm-store-
 
     - name: Install dependencies
       shell: bash
