--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,5 +16,5 @@ jobs:
 
       - name: release-it
         uses: TheRealWaldo/release-it@v0.7.2
-        with:
-          json-opts: '{"dry-run": true}'
+#        with:
+#          json-opts: '{"dry-run": true}'
