--- a/apps/stream-components/project.json
+++ b/apps/stream-components/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/stream-components/src",
-  "prefix": "stream-components",
+  "prefix": "sc",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
@@ -24,6 +24,12 @@
       },
       "configurations": {
         "production": {
+          "fileReplacements": [
+            {
+              "replace": "apps/stream-components/src/environments/environment.ts",
+              "with": "apps/stream-components/src/environments/environment.prod.ts"
+            }
+          ],
           "budgets": [
             {
               "type": "initial",
@@ -53,10 +59,12 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "stream-components:build:production"
+          "browserTarget": "stream-components:build:production",
+          "proxyConfig": "apps/stream-components/proxy.conf.json"
         },
         "development": {
-          "browserTarget": "stream-components:build:development"
+          "browserTarget": "stream-components:build:development",
+          "proxyConfig": "apps/stream-components/proxy.conf.json"
         }
       },
       "defaultConfiguration": "development"
