--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@fastify/cookie": "8.3.0",
     "@fastify/cors": "8.2.0",
+    "@fastify/static": "6.6.0",
     "@fastify/websocket": "7.1.1",
     "@prisma/client": "4.7.1",
     "@trpc/client": "10.5.0",
     "@trpc/server": "10.5.0",
     "argon2": "0.30.2",
     "fastify": "4.10.2",
+    "fastify-sse-v2": "3.0.0",
     "pino": "8.8.0",
     "superjson": "1.12.0",
     "uuid": "9.0.0",
