chore: prisma generate in ci

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -40,4 +40,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Build
+        run: pnpm prisma generate
+
+      - name: Build
         run: pnpm nx affected:build --parallel --verbose
