--- a/package.json
+++ b/package.json
@@ -17,16 +17,13 @@
     "@fastify/cookie": "8.3.0",
     "@fastify/cors": "8.2.0",
     "@fastify/static": "6.6.0",
-    "@fastify/websocket": "7.1.1",
     "@prisma/client": "4.7.1",
     "@trpc/client": "10.5.0",
     "@trpc/server": "10.5.0",
     "argon2": "0.30.2",
     "fastify": "4.10.2",
-    "fastify-sse-v2": "3.0.0",
     "fp-ts": "2.13.1",
     "pino": "8.8.0",
-    "superjson": "1.12.0",
     "uuid": "9.0.0",
     "ws": "8.11.0",
     "zod": "3.20.2"
@@ -60,6 +57,7 @@
     "@rx-angular/template": "1.0.0-rc.4",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.16",
+    "@types/tmi.js": "1.8.2",
     "@types/uuid": "9.0.0",
     "@types/ws": "8.5.3",
     "@typescript-eslint/eslint-plugin": "5.46.1",
@@ -79,6 +77,7 @@
     "prisma": "4.7.1",
     "rxjs": "7.8.0",
     "tailwindcss": "^3.2.4",
+    "tmi.js": "1.8.5",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "tslib": "2.4.1",
