--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/ws": "8.5.3",
     "@typescript-eslint/eslint-plugin": "5.46.1",
     "@typescript-eslint/parser": "5.46.1",
+    "angular-animations": "0.11.0",
     "autoprefixer": "^10.4.13",
     "cypress": "11.0.0",
     "eslint": "8.30.0",
