--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/server": "10.5.0",
     "argon2": "0.30.2",
     "fastify": "4.10.2",
+    "fastify-plugin": "4.4.0",
     "fp-ts": "2.13.1",
     "pino": "8.8.0",
     "uuid": "9.0.0",
