feat: api config

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@trpc/client": "10.5.0",
     "@trpc/server": "10.5.0",
     "argon2": "0.30.2",
+    "config": "3.3.8",
     "fastify": "4.10.2",
     "fastify-plugin": "4.4.0",
     "fp-ts": "2.13.1",
+    "js-yaml": "4.1.0",
     "pino": "8.8.0",
     "uuid": "9.0.0",
     "ws": "8.11.0",
@@ -56,6 +58,7 @@
     "@rx-angular/cdk": "1.0.0-rc.3",
     "@rx-angular/state": "1.7.0",
     "@rx-angular/template": "1.0.0-rc.4",
+    "@types/config": "3.3.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.16",
     "@types/tmi.js": "1.8.2",
