--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fastify/cookie": "8.3.0",
     "@fastify/cors": "8.2.0",
     "@fastify/static": "6.6.0",
-    "@prisma/client": "4.7.1",
+    "@prisma/client": "4.8.0",
     "@trpc/client": "10.5.0",
     "@trpc/server": "10.5.0",
     "argon2": "0.30.2",
@@ -26,6 +26,8 @@
     "fastify-plugin": "4.4.0",
     "fp-ts": "2.13.1",
     "js-yaml": "4.1.0",
+    "lru-cache": "7.14.1",
+    "ms": "2.1.3",
     "pino": "8.8.0",
     "uuid": "9.0.0",
     "ws": "8.11.0",
@@ -60,6 +62,7 @@
     "@rx-angular/template": "1.0.0-rc.4",
     "@types/config": "3.3.0",
     "@types/jest": "28.1.1",
+    "@types/ms": "0.7.31",
     "@types/node": "18.11.16",
     "@types/tmi.js": "1.8.2",
     "@types/uuid": "9.0.0",
@@ -79,7 +82,7 @@
     "pino-pretty": "9.1.1",
     "postcss": "^8.4.20",
     "prettier": "2.8.1",
-    "prisma": "4.7.1",
+    "prisma": "4.8.0",
     "rxjs": "7.8.0",
     "tailwindcss": "^3.2.4",
     "tmi.js": "1.8.5",
