--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular-eslint/eslint-plugin-template": "15.1.0",
     "@angular-eslint/template-parser": "15.1.0",
     "@angular/animations": "15.0.4",
+    "@angular/cdk": "15.0.3",
     "@angular/cli": "15.0.4",
     "@angular/common": "15.0.4",
     "@angular/compiler": "15.0.4",
